change default scala version